# OpenMS-playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
inspect/: environment.yml  inspect_mzmlb.ipynb
test/: environment.yml  inspect_mzmlb.ipynb  small.mzMLb
